# dftbplus-ase

./: .gitignore  AUTHORS.rst  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/dftbplus/: __init__.py  calculator.py  dftbplus.py  io.py  legacy_calculator.py
test/: test_dummy.py
