[metadata]
name = dftbplus-ase
version = 0.1
author = DFTB+ developers group
author_email = info@dftbplus.org
url = https://github.com/dftbplus/dftbplus-ase
description = Interfacing DFTB+ with the Atomic Simulation Environment
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPL
platform = any

[options]
include_package_data = True
package_dir =
    = src
packages = dftbplus

[options.packages.find]
where = src
